AB test analysis of clicks on ToC

--- a/analysis_5_clicks_modeling.ipynb
+++ b/analysis_5_clicks_modeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eceed60e",
+   "id": "951593cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1dc36cff",
+   "id": "943cdacb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ece2ae10",
+   "id": "254954ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f5986fe0",
+   "id": "ad4a2a0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "999d334e",
+   "id": "5802e256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9286e091",
+   "id": "9c1a8c62",
    "metadata": {},
    "outputs": [
     {
@@ -111,12 +111,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daa4c86f",
+   "id": "90f6db72",
    "metadata": {},
    "source": [
     "# Purpose\n",
     "\n",
-    "We discovered a bucketing issue that the sessions in treatment group were not consistantly seeing the new ToC. Some of sessions also saw the old ToC. It happened on all type of viewport sizes. For example on frwiki, in treatment group  more than half of the sessions with larger than 1000px viewport are assigned to old ToC. report\n",
+    "We discovered a bucketing issue that the sessions in treatment group were not consistantly seeing the new ToC. Some of sessions also saw the old ToC. It happened on all type of viewport sizes. For example on frwiki, in treatment group  more than half of the sessions with larger than 1000px viewport are assigned to old ToC. [(report)](http://nbviewer.org/github/jenniferwang-wmf/WEB_table_of_contents/blob/master/analysis_4_AB_test.ipynb)\n",
     "\n",
     "In this notebook, we try to analyze clicks after filtering the clicks on old ToC in treatment group and filtering the clicks on new ToC in control group. \n",
     "\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "67006ca6",
+   "id": "368143c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4640a739",
+   "id": "07652717",
    "metadata": {},
    "source": [
     "# Q1: Is the new table of contents is used more frequently than the previous table of contents\n"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36481edb",
+   "id": "d436052a",
    "metadata": {},
    "source": [
     "Query clicks per page token by each session"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "11e1c1bd",
+   "id": "cc446f68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5f9e3c9c",
+   "id": "50bbb701",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fd03eed9",
+   "id": "8e4df393",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0dfe2f1c",
+   "id": "f117f5fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2b905d9",
+   "id": "335dfdc3",
    "metadata": {},
    "source": [
     "## Logged-in Users"
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "4b24317f",
+   "id": "6cbe59b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "020dc7b2",
+   "id": "5e2c73d4",
    "metadata": {},
    "source": [
     "### Data exploration\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "1c338ec4",
+   "id": "0ea7538c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6db2c511",
+   "id": "7324c861",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd9670a",
+   "id": "f2790b2d",
    "metadata": {},
    "source": [
     "__Note__ \n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "ba1bf7bc",
+   "id": "1a53420f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "638d34c1",
+   "id": "73888037",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "713dac53",
+   "id": "7d2ec7a6",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9bed0c77",
+   "id": "2b76a0c3",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a6b7f72e",
+   "id": "942a181a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "1368000f",
+   "id": "bbda7649",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e8281b",
+   "id": "c41b4482",
    "metadata": {},
    "source": [
     "__Note__  \n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ee78e7",
+   "id": "5de5ad67",
    "metadata": {},
    "source": [
     "### Distribution of number of clicks"
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f7f2a254",
+   "id": "1fc32194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f5e3a3a6",
+   "id": "e3c2d837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "dca077ae",
+   "id": "4f9f60da",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "088af558",
+   "id": "18e47b67",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "28cfe9c6",
+   "id": "8408c96d",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "647db89d",
+   "id": "87019e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ca152018",
+   "id": "f80bb066",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "475b3751",
+   "id": "1fc99676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "5bb92923",
+   "id": "cdc6efa8",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "d2cd123c",
+   "id": "43bec186",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "6ba715cc",
+   "id": "fdd3d6a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "e40391aa",
+   "id": "c0566e1d",
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "a89d91f4",
+   "id": "bc871966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "de95bb7b",
+   "id": "7096741f",
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "26c59b4e",
+   "id": "0794cebe",
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e6d6429",
+   "id": "679318d9",
    "metadata": {},
    "source": [
     "__Note__   \n",
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f17a2375",
+   "id": "d906f705",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "e805ba8e",
+   "id": "34f66b4c",
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f72aefed",
+   "id": "af477227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2186a869",
+   "id": "16c8c768",
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "09ee4c55",
+   "id": "8d7b5ecb",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "2a22b29b",
+   "id": "15d05eff",
    "metadata": {},
    "outputs": [
     {
@@ -2317,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "d33a2b6d",
+   "id": "70fa8e55",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7e51af43",
+   "id": "dd5d7ca8",
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342ed5c5",
+   "id": "7ad11bde",
    "metadata": {},
    "source": [
     "__Note:__  \n",
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13c803e",
+   "id": "5f616f6c",
    "metadata": {},
    "source": [
     "## Anonymous user"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "baffc382",
+   "id": "c40d1b44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2444,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "7f8f2699",
+   "id": "dde015b5",
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "caa71039",
+   "id": "e5639d6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2535,7 +2535,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "2cc1ffb1",
+   "id": "db2c3bfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2545,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ff83d063",
+   "id": "2135f12f",
    "metadata": {},
    "outputs": [
     {
@@ -2574,7 +2574,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "f38bfabf",
+   "id": "7abbffe7",
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "cb1722bc",
+   "id": "ecd1b32a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2617,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a89981a0",
+   "id": "8e2b6e16",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "538800d1",
+   "id": "94cf0f49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "799a37fc",
+   "id": "617ec769",
    "metadata": {},
    "outputs": [
     {
@@ -2986,7 +2986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf49326",
+   "id": "7cd9a3d9",
    "metadata": {},
    "source": [
     "### Distribution of number of clicks"
@@ -2995,7 +2995,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "68e38127",
+   "id": "9ef15ff0",
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6bbfbe",
+   "id": "0e107180",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -3056,7 +3056,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "b61892a4",
+   "id": "9415cdb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "406f6ef5",
+   "id": "85d2648b",
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "81f7d77e",
+   "id": "54bb65b0",
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3156,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "f817d2df",
+   "id": "2e97bd75",
    "metadata": {},
    "outputs": [
     {
@@ -3185,7 +3185,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "3f787c13",
+   "id": "80fa0823",
    "metadata": {},
    "outputs": [
     {
@@ -3249,7 +3249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085f3eb7",
+   "id": "562cd37b",
    "metadata": {},
    "source": [
     "__Note:__  \n",
@@ -3263,7 +3263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e761ee31",
+   "id": "bf9a8f04",
    "metadata": {},
    "source": [
     "__Summary__\n",
@@ -3279,7 +3279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c007ba",
+   "id": "7fb25bbf",
    "metadata": {},
    "outputs": [],
    "source": []
